feat: Separate main-nav

--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head (page)"></head>
 <body>
-  <div th:replace="fragments.html :: main-nav"></div>
+  <div th:replace="fragments.html :: user-main-nav"></div>
   <div th:replace="fragments.html :: profile-banner"></div>
   <div class="container">
     <div th:replace="fragments.html :: profile-menu (profileMenu='info')"></div>
