--- a/src/main/resources/templates/account/check-email.html
+++ b/src/main/resources/templates/account/check-email.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head (page)"></head>
 <body class="bg-light">
-    <div th:replace="fragments.html :: main-nav"></div>
+    <div th:replace="fragments.html :: user-main-nav"></div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="py-5 text-center" th:if="${error != null}">
