--- a/src/main/resources/templates/account/children.html
+++ b/src/main/resources/templates/account/children.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head th:replace="fragments.html :: head (page)"></head>
 <body>
-  <div th:replace="fragments.html :: main-nav"></div>
+  <div th:replace="fragments.html :: user-main-nav"></div>
   <div th:replace="fragments.html :: profile-banner"></div>
   <div class="container">
     <div th:replace="fragments.html :: profile-menu (profileMenu='children')"></div>
