--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head (page='sign-up')"></head>
 <body style="background-color: #666666;">
-<nav th:replace="fragments.html::main-nav"></nav>
+<nav th:replace="fragments.html::user-main-nav"></nav>
     <div class="limiter">
         <div class="container-login100">
             <div class="wrap-login100">
