--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments.html :: head(page)"></head>
 <body class="bg-light">
-    <div th:replace="fragments.html::main-nav"></div>
+    <div th:replace="fragments.html::admin-main-nav"></div>
     <div class="container">
         <div class="py-5 text-center">
             <h2>ADMIN 페이지 입니다.</h2>
