--- a/src/main/resources/templates/admin/reservations.html
+++ b/src/main/resources/templates/admin/reservations.html
@@ -18,7 +18,7 @@
                         <div th:each="reservation : ${reservationList}">
                             <div class="card">
                                 <div class="card-header text-center">
-                                    <h4 th:text="${reservation.reservationTime}" style="display: inline"></h4>
+                                    <h4 th:text="${reservation.getReservationDateTimeAsString()}" style="display: inline"></h4>
                                 </div>
                                 <div class="card-body">
                                     <p class="card-text text-center" th:text="${reservation.reservationLocation}"></p>
