--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css"/>
     <link rel='stylesheet' href='/node_modules/timepicki/css/timepicki.css'/>
+    <link rel="stylesheet"
+          href="/node_modules/tempusdominus-bootstrap-4/build/css/tempusdominus-bootstrap-4.min.css"/>
     <th:block th:if="${page=='sign-up' || page=='login'}">
         <link rel="stylesheet" href="/node_modules/@yaireo/tagify/dist/tagify.css">
         <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
