--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,46 +50,51 @@
     <script type="application/javascript">
 
         function enrollBtnClick(reservationId) {
-            var token = $("meta[name='_csrf']").attr('content');
-            var header = $("meta[name='_csrf_header']").attr('content');
+            let childVal = $("#child").val();
+            if (childVal != '학생을 추가해주세요.') {
+                var token = $("meta[name='_csrf']").attr('content');
+                var header = $("meta[name='_csrf_header']").attr('content');
 
-            $.ajax({
-                url: "/enroll",
-                type: "POST",
-                method: "POST",
-                contentType: "application/json",
-                data: JSON.stringify({
-                    "childId": $("#child").val(),
-                    "reservationId": reservationId
-                }),
-                beforeSend: function (xhr) {
-                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
-                    xhr.setRequestHeader(header, token);
-                },
-                dataType: "text",
-                cache: false,
-                success: function (response, result, status) {
-                    console.log(result);
-                    console.log(status);
-                    document.open();
-                    document.write(response);
-                    document.close();
-                },
-                error: function (data, jqXHR, status, error) {
+                $.ajax({
+                    url: "/enroll",
+                    type: "POST",
+                    method: "POST",
+                    contentType: "application/json",
+                    data: JSON.stringify({
+                        "childId": $("#child").val(),
+                        "reservationId": reservationId
+                    }),
+                    beforeSend: function (xhr) {
+                        /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                        xhr.setRequestHeader(header, token);
+                    },
+                    dataType: "text",
+                    cache: false,
+                    success: function (response, result, status) {
+                        console.log(result);
+                        console.log(status);
+                        document.open();
+                        document.write(response);
+                        document.close();
+                    },
+                    error: function (data, jqXHR, status, error) {
 
-                    if (jqXHR.status == '401') {
-                        alert('로그인 후 이용해주세요');
-                        location.href = '/login';
-                    } else {
-                        console.warn(jqXHR.responseText);
-                        console.log("readyState: " + jqXHR.readyState);
-                        console.log("responseText: " + jqXHR.responseText);
-                        console.log("status: " + jqXHR.status);
-                        console.log("text status: " + status);
-                        console.log("error: " + error);
+                        if (jqXHR.status == '401') {
+                            alert('로그인 후 이용해주세요');
+                            location.href = '/login';
+                        } else {
+                            console.warn(jqXHR.responseText);
+                            console.log("readyState: " + jqXHR.readyState);
+                            console.log("responseText: " + jqXHR.responseText);
+                            console.log("status: " + jqXHR.status);
+                            console.log("text status: " + status);
+                            console.log("error: " + error);
+                        }
                     }
-                }
-            })
+                })
+            }else{
+                alert("학생을 선택해주세요.");
+            }
         }
     </script>
 </body>
