--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -102,10 +102,10 @@
                         <span sec:authentication="name">Username</span>
                     </h6>
                     <a class="dropdown-item" th:href="@{'/profile/' + ${#authentication.name}}">프로필</a>
-                    <a class="dropdown-item" >스터디</a>
+                    <a class="dropdown-item" th:href="@{'/enrollments'}">예약 내역</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#" th:href="@{'/settings/profile'}">설정</a>
-                    <a class="dropdown-item" href="#" th:href="@{'/profile/' + ${account.nickname} +'/children'}">학생 관리</a>
+                    <a class="dropdown-item" href="#" th:href="@{'/profile/' + ${#authentication.name} +'/children'}">학생 관리</a>
                     <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
                         <button class="dropdown-item" type="submit">로그아웃</button>
                     </form>
