--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -138,7 +138,7 @@
             <li class="nav-item" sec:authorize="!isAuthenticated()">
                 <a class="nav-link" th:href="@{/sign-up}">가입</a>
             </li>
-            <li class="nav-item" th:if="${account.role == T(com.alliz.domain.Role).ROLE_ADMIN}" sec:authorize="isAuthenticated()">
+            <li class="nav-item" th:if="${account.role == T(com.alliz.domain.Role).ADMIN}" sec:authorize="isAuthenticated()">
                 <a class="nav-link" th:href="@{/admin/new-reservations}"><i class="fa fa-bus"></i></a>
             </li>
             <li class="nav-item" sec:authorize="isAuthenticated()">
