--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,11 +50,12 @@
                         </button>
                     </div>
 
-                    <!--<div class="text-center p-t-46 p-b-20">
+                    <div class="text-center p-t-46 p-b-20">
                             <span class="txt2">
                                 or sign up using
                             </span>
-                    </div>-->
+                        <a href="/oauth2/authorization/google" class="btn btn-success active" role="button">Google Login</a>
+                    </div>
                 </form>
 
                 <div class="login100-more" style="background-image: url('images/bg-01.jpg');">
